--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <div class="container">
     <div class="bio">
-      <img src="assets/images/nathanial.jpg" alt="Nathanial Peck" />
-      <p>Hi, I’m Nathanial Peck — an artist blending music and 3D visuals to tell bold stories. Welcome to my world.</p>
+      <img src="assets/images/profile.jpg" alt="Metro" />
+      <p>Yo, I’m Metro — </p>
     </div>
 
     <div class="player">
