--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>whoistheMETRO?</title>
+  <title>whoistheMETRO</title>
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
 <body>
-  <h1 id="siteTitle" class="site-title">whoistheMETRO?</h1>
+  <h1 id="siteTitle" class="site-title">whoistheMETRO</h1>
 
   <div class="container">
     <div class="bio">
@@ -36,7 +36,7 @@
   </div>
 
   <div class="gallery">
-    <h2>🎥 3D Art & Video</h2>
+    <h2>Videos</h2>
     <div class="video-grid">
       <video controls><source src="assets/videos/video1.mp4" type="video/mp4" /></video>
       <video controls><source src="assets/videos/video2.mp4" type="video/mp4" /></video>
