--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="container">
     <div class="bio">
-      <img src="assets/images/profile.jpg" alt="Metro" />
+      <img src="assets/images/profile1.jpg" alt="Metro" />
       <p>Yo, I’m Metro — </p>
     </div>
 
