--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <div class="container">
     <div class="bio">
-      <img src="assets/images/profile1.jpg" alt="Metro" />
-      <p>Yo, I’m Metro — </p>
+      <img src="assets/images/nathanial.jpg" alt="Nathanial Peck" />
+      <p>Hi, I’m Metro - </p>
     </div>
 
     <div class="player">
@@ -36,12 +36,25 @@
   </div>
 
   <div class="gallery">
-    <h2>Videos</h2>
+    <h2>🎥 3D Art & Video</h2>
     <div class="video-grid">
       <video controls><source src="assets/videos/video1.mp4" type="video/mp4" /></video>
       <video controls><source src="assets/videos/video2.mp4" type="video/mp4" /></video>
       <video controls><source src="assets/videos/video3.mp4" type="video/mp4" /></video>
     </div>
   </div>
+
+  <div class="contact">
+    <h2>Contact Me</h2>
+    <form action="mailto:whoisthemetro@gmail.com" method="post" enctype="text/plain">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required />
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required />
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </div>
 </body>
-</html>
+</html
