--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <div class="container">
     <div class="bio">
-      <img src="assets/images/profile1.jpg" alt="Nathanial Peck" />
+      <img src="assets/images/profile2.jpg" alt="Metro" />
       <p>Hi, I’m Metro - </p>
     </div>
 
