--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="bio">
       <img src="assets/images/profile2.jpg" alt="Metro" />
-      <p>Hi, I’m Metro - </p>
+      <p>Yo, I’m Metro - I make music and 3D art. I burritos in the sand. Don't wanna taco 'bout it. </p>
     </div>
 
     <div class="player">
@@ -36,7 +36,7 @@
   </div>
 
   <div class="gallery">
-    <h2>🎥 3D Art & Video</h2>
+    <h2>Videos</h2>
     <div class="video-grid">
       <video controls><source src="assets/videos/video1.mp4" type="video/mp4" /></video>
       <video controls><source src="assets/videos/video2.mp4" type="video/mp4" /></video>
