--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="bio">
       <img src="assets/images/profile2.jpg" alt="Metro" />
-      <p>Yo, I’m Metro - I make music and 3D art. I burritos in the sand. Don't wanna taco 'bout it. </p>
+      <p>Hi, I’m Metro - </p>
     </div>
 
     <div class="player">
@@ -27,12 +27,16 @@
           <button onclick="togglePlay()">▶️/⏸️</button>
           <button onclick="nextSong()">⏭️</button>
         </div>
-        <div id="tracklist" class="tracklist"></div>
+        <div class="volume-control">
+          <input type="range" id="volume" min="0" max="1" step="0.01" value="1" />
         </div>
+        <div id="tracklist" class="tracklist"></div>
+      </div>
+    </div>
   </div>
 
   <div class="gallery">
-    <h2>Videos</h2>
+    <h2>🎥 3D Art & Video</h2>
     <div class="video-grid">
       <video controls><source src="assets/videos/video1.mp4" type="video/mp4" /></video>
       <video controls><source src="assets/videos/video2.mp4" type="video/mp4" /></video>
