--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="player">
       <div class="player-box">
-        <div id="song-title">Song 1</div>
+        <div id="song-title"></div>
         <audio id="audio" controls>
           <source src="assets/songs/song1.mp3" type="audio/mp3" />
         </audio>
