--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
 
   <div class="contact">
-    <h2>Contact Me</h2>
+    <h2>Hit Me Up</h2>
     <form action="mailto:whoisthemetro@gmail.com" method="post" enctype="text/plain">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required />
