--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <audio id="audio" controls>
           <source src="assets/songs/song1.mp3" type="audio/mp3" />
         </audio>
-        //
-        //
-        
+       <div class="volume-control">
+          <input type="range" id="volume" min="0" max="1" step="0.01" value="1" />
+        </div>
         <div id="tracklist" class="tracklist"></div>
       </div>
     </div>
