--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <audio id="audio" controls>
           <source src="assets/songs/song1.mp3" type="audio/mp3" />
         </audio>
-       <div class="volume-control">
+        <div class="volume-control">
           <input type="range" id="volume" min="0" max="1" step="0.01" value="1" />
         </div>
         <div id="tracklist" class="tracklist"></div>
@@ -33,9 +33,9 @@
   <div class="gallery">
     <h2>🎥 3D Art & Video</h2>
     <div class="video-grid">
-      <video controls><source src="assets/videos/video1.mp4" type="video/mp4" /></video>
-      <video controls><source src="assets/videos/video2.mp4" type="video/mp4" /></video>
-      <video controls><source src="assets/videos/video3.mp4" type="video/mp4" /></video>
+      <video controls><source src="assets/videos/video1.mov" type="video/quicktime" /></video>
+      <video controls><source src="assets/videos/video2.mov" type="video/quicktime" /></video>
+      <video controls><source src="assets/videos/video3.mov" type="video/quicktime" /></video>
     </div>
   </div>
 
@@ -52,4 +52,4 @@
     </form>
   </div>
 </body>
-</html
+</html>
