--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   <div class="gallery">
     <h2>🎥 3D Art & Video</h2>
     <div class="video-grid">
-      <video controls><source src="assets/videos/video1.mov" type="video/quicktime" /></video>
-      <video controls><source src="assets/videos/video2.mov" type="video/quicktime" /></video>
-      <video controls><source src="assets/videos/video3.mov" type="video/quicktime" /></video>
+      <video controls><source src="assets/videos/video1.mp4" type="video/mp4" /></video>
+      <video controls><source src="assets/videos/video2.mp4" type="video/mp4" /></video>
+      <video controls><source src="assets/videos/video3.mp4" type="video/mp4" /></video>
     </div>
   </div>
 
