--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   <div class="gallery">
     <h2>🎥 3D Art & Video</h2>
     <div class="video-grid">
-      <video controls><source src="assets/videos/video1.mp4" type="video/mp4" /></video>
-      <video controls><source src="assets/videos/video2.mp4" type="video/mp4" /></video>
-      <video controls><source src="assets/videos/video3.mp4" type="video/mp4" /></video>
+      <iframe src="https://www.youtube.com/embed/VIDEO_ID_1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
 
