--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 
   <div class="gallery">
-    <h2>🎥 3D Art & Video</h2>
+    <h2>🎥 Videos</h2>
     <div class="video-grid">
       <iframe src="https://www.youtube.com/embed/aT1MUHFoGBA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
