--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <div class="player">
       <div class="player-box">
         <div id="song-title"></div>
+        <div id="artist-credits"></div>
         <audio id="audio" controls>
-          <source src="assets/songs/song1.mp3" type="audio/mp3" />
+          <source src="assets/songs/signs.mp3" type="audio/mp3" />
         </audio>
         <div class="volume-control">
           <input type="range" id="volume" min="0" max="1" step="0.01" value="1" />
