--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="bio">
       <img src="assets/images/profile2.jpg" alt="Metro" />
-      <p>Hi, I’m Metro - I make music and 3D design. I  b u r r i t o s  in the sand, don't wanna  t a c o  'bout it.</p>
+      <p>Yo, I’m Metro - I like to make music and 3D visuals. I b u r r i t o s  in the sand, don't wanna  t a c o  'bout it.</p>
     </div>
 
     <div class="player">
