--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <div class="container">
     <div class="bio">
       <img src="assets/images/profile2.jpg" alt="Metro" />
-      <p>Yo, I’m Metro - I like to make music and 3D visuals. I b u r r i t o s  in the sand, don't wanna  t a c o  'bout it.</p>
+      <p>Yo, I’m Metro - I'm a self taught music producer | audio engineer | mastering engineer.  I also do 3D designs using Unreal Engine and Blender.  
+        Check out my work and if you like what you hear and see, consider hiring me to work on your new project!</p>
     </div>
 
     <div class="player">
