--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="bio">
       <img src="assets/images/profile2.jpg" alt="Metro" />
-      <p>Yo, I’m Metro - I'm a self taught music producer | audio engineer | mastering engineer. <br>I also do 3D designs using Unreal Engine and Blender.</br>
+      <p><br>Yo, I’m Metro - I'm a self taught music producer | audio engineer | mastering engineer.</br><br>I do 3D videos using Unreal Engine and Blender.</br>
         <br>Check out my work and if you like what you hear and see, consider hiring me to work on your next project!</br></p>
     </div>
 
